# HRPG-Main

./: .gitignore
ADS131M02_serial/: CMakeLists.txt
pressure_test_wired/: CMakeLists.txt  LoRa-RP2040.cpp  LoRa-RP2040.h  Print.h  ignition_control.c  ignition_control.h  mcp_pressure.c  mcp_pressure.cpp  mcp_pressure.h  pressure_test_wired.c  pressure_test_wired.cpp  sequences.h  sequencing.c  sequencing.cpp  sequencing.h  solenoid_control.c  solenoid_control.cpp  solenoid_control.h  spi_connections.h  thrust_sense.cpp  thrust_sense.h
relay_test/: CMakeLists.txt
